--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -179,7 +179,7 @@ input.iconic-circle {
     height: 30px;
     padding: 7px;
     cursor: pointer !important;
-    z-index: 999;
+    z-index: 8;
     &:hover {
         background: #888 !important;
     }
@@ -233,9 +233,9 @@ input.iconic-circle {
 
 @media only screen and (max-width: 767px) {
     .app .query-box input {
-        position: fixed;
+        position: absolute;
         left: 40px;
-        top: 55px;
+        top: 18px;
         right: 10px;
         width: auto;
     }
